--- a/api.conf
+++ b/api.conf
@@ -15,8 +15,7 @@ location = /error {
   more_set_headers
     'access-control-allow-origin: *'
     'access-control-expose-headers: gateway-err--'
-    'gateway-err--: {"msg": "$arg_msg", "addr": "$upstream_addr", "url": "$arg_url"}'
-  ;
+    'gateway-err--: {"msg": "$arg_msg", "addr": "$upstream_addr", "url": "$arg_url"}';
   return              204;
 }
 
@@ -27,8 +26,7 @@ location = /preflight {
   more_set_headers
     'access-control-allow-origin: *'
     'access-control-allow-methods: GET,POST,PUT,PATCH,TRACE,DELETE,HEAD,OPTIONS'
-    'access-control-max-age: 1728000'
-  ;
+    'access-control-max-age: 1728000';
   return              204;
 }
 
